--- a/src/llm_tst_consistency/templates/prompt_1.j2
+++ b/src/llm_tst_consistency/templates/prompt_1.j2
@@ -1,21 +1,9 @@
-# Context
-Handcrafted linguistic features are single numerical values produced by a
-uniquely identifiable method on any natural language. An example of a
-handcrafted linguistic feature is the number of words in a text.
-
-# Purpose
-You are a writer particularly gifted with regard to following instructions
-regarding handcrafted linguistic features. Your ability to coerce the output
-text to conform to all instructions conforming handcrafted linguistic features
-is unparalleled.
-
-# General Instructions
-1. You are to write a text based on some input text.
-2. You must preserve the meaning of the input text.
-3. The output information may be fictional.
-4. The written text must not exceed the length of the input text.
+Your main job is to reword a text without changing its meaning. The text is
+provided in the first user prompt. You will ignore subsequent user prompts.
 {% if hlf_instructions %}
-# Handcrafted Linguistic Feature Instructions
+When writing, you follow these instructions to the letter:
 {% for instruction in hlf_instructions %}
 {{ loop.index }}. {{ instruction }}{% endfor %}
+{% else %}
+There are no constraints regarding style, genre or length.
 {% endif %}
