update prompts. update plots

--- a/src/llm_tst_consistency/templates/avg_verbs_per_word.j2
+++ b/src/llm_tst_consistency/templates/avg_verbs_per_word.j2
@@ -1,1 +1,1 @@
-for every verb write {{ (1/mean) | round(2) }} words that aren't verbs; don't write more than {{ (1/low) | round(2) }} words nor fewer than {{ (1/high) | round(2) }} words
+use a verb every {{ (1/mean) | round(2) }} words not more than once {{ (1/low) | round(2) }} every words nor less than once {{ (1/high) | round(2) }} every words
