--- a/src/llm_tst_consistency/templates/corrected_adjective_variation.j2
+++ b/src/llm_tst_consistency/templates/corrected_adjective_variation.j2
@@ -1,1 +1,1 @@
-be mindful of using adjectives in comparisons: use around {{ mean }} comparative forms of the same adjective; don't use more than {{ high }} forms nor fewer than {{ low }} forms
+use {{ mean }} comparative forms of the same adjective; never use more than {{ high }} nor fewer than {{ low }} comparative forms of the same adjective
