--- a/src/llm_tst_consistency/templates/grade_level.j2
+++ b/src/llm_tst_consistency/templates/grade_level.j2
@@ -1,1 +1,1 @@
-write as if you studied for {{ mean }} years, but anywhere between {{ low }} and {{ high }} years of education will do
+write on the same level as a human in year {{ mean }} of study
