--- a/src/llm_tst_consistency/templates/kuperman_age.j2
+++ b/src/llm_tst_consistency/templates/kuperman_age.j2
@@ -1,1 +1,1 @@
-use words that people learn around the age of {{ mean }}, but no sooner than {{ low }} nor later than {{ high }}
+use words acquired by humans at age {{ mean }}, but no sooner than age {{ low }}, nor later than age {{ high }}
