--- a/src/llm_tst_consistency/templates/total_named_entities.j2
+++ b/src/llm_tst_consistency/templates/total_named_entities.j2
@@ -1,1 +1,1 @@
-mention around {{ mean }} named entities, but no more than {{ high }}, nor less than {{ low }}
+mention {{ mean }} entities by name, but no more than {{ high }}, nor fewer than {{ low }}
