--- a/src/llm_tst_consistency/templates/total_sentences.j2
+++ b/src/llm_tst_consistency/templates/total_sentences.j2
@@ -1,1 +1,1 @@
-use around {{ mean }} sentences, but no more than {{ high }} nor less than {{ low }}
+use {{ mean }} sentences, but no more than {{ high }} nor fewer than {{ low }}
