--- a/src/llm_tst_consistency/templates/total_unique_adjectives.j2
+++ b/src/llm_tst_consistency/templates/total_unique_adjectives.j2
@@ -1,1 +1,1 @@
-use about {{ mean }} unique adjectives, but no more than {{ high }}, nor fewer than {{ low }}
+use {{ mean }} unique adjectives, but no more than {{ high }}, nor fewer than {{ low }}
