--- a/src/llm_tst_consistency/templates/corrected_verb_variation.j2
+++ b/src/llm_tst_consistency/templates/corrected_verb_variation.j2
@@ -1,1 +1,1 @@
-be mindful of verb conjugations: use around {{ mean }} conjugations of the same verb; don't use more than {{ high }} conjugations nor fewer than {{ low }} conjugations
+use {{ mean }} different conjugations of the same verb. never use more than {{ high }} conjugations per verb nor fewer than {{ low }} conjugations per verb
