--- a/src/llm_tst_consistency/templates/total_unique_words.j2
+++ b/src/llm_tst_consistency/templates/total_unique_words.j2
@@ -1,1 +1,1 @@
-use around {{ mean }} unique words, but no more than {{ high }}, nor fewer than {{ low }}
+use {{ mean }} unique words, but no more than {{ high }}, nor fewer than {{ low }}
