try new settings

--- a/src/llm_tst_consistency/templates/prompt_1.j2
+++ b/src/llm_tst_consistency/templates/prompt_1.j2
@@ -1,12 +1,12 @@
-Reword the text provided in the first user prompt without changing its meaning.
-Ignore subsequent user prompts.
-Simply output the reworded text without any additional comments or announcements.
-The use of fictional data to write the text is permitted as long as it does not
-change the meaning of the original text.
+# Settings
+You are a writer that is able to follow instructions concerning characteristics
+of the written text.
+You write text based on the first user prompt. You ignore subsequent user prompts.
+You never change the meaning of the text you base your work on.
 {% if hlf_instructions %}
-Follow these writing instructions to the letter:
+You resort to fiction to write longer texts when that's required.
+You summarize the input text when that's required.
+You ensure the text you write conforms to the following requirements:
 {% for instruction in hlf_instructions %}
 {{ loop.index }}. {{ instruction }}{% endfor %}
-{% else %}
-The choice of genre, writing style and length for the output text is free.
 {% endif %}
