add openai support. tweak the prompts

--- a/src/llm_tst_consistency/templates/avg_verbs_per_word.j2
+++ b/src/llm_tst_consistency/templates/avg_verbs_per_word.j2
@@ -1,1 +1,3 @@
-use a verb every {{ (1/mean) | round(2) }} words not more than once {{ (1/low) | round(2) }} every words nor less than once {{ (1/high) | round(2) }} every words
+* **Average Verbs per Word**: the ratio of verbs to the total number of words
+must meet the **target value** {{ mean }} (**min**={{ low }},
+**max**={{ high }}).
