--- a/src/llm_tst_consistency/templates/corrected_adjective_variation.j2
+++ b/src/llm_tst_consistency/templates/corrected_adjective_variation.j2
@@ -1,1 +1,3 @@
-use {{ mean }} comparative forms of the same adjective; never use more than {{ high }} nor fewer than {{ low }} comparative forms of the same adjective
+* **Corrected Adjective Variation**: ensure a range of adjectives that fits
+within the **target variation** of {{ mean }} (**min**={{ low }},
+**max**={{ high }}).
