--- a/src/llm_tst_consistency/templates/corrected_verb_variation.j2
+++ b/src/llm_tst_consistency/templates/corrected_verb_variation.j2
@@ -1,1 +1,2 @@
-use {{ mean }} different conjugations of the same verb. never use more than {{ high }} conjugations per verb nor fewer than {{ low }} conjugations per verb
+* **Corrected Verb Variation**: use a variety of verbs the **target diversity**
+of {{ mean }} (**min**={{ low }}, **max**={{ high }})
