--- a/src/llm_tst_consistency/templates/grade_level.j2
+++ b/src/llm_tst_consistency/templates/grade_level.j2
@@ -1,1 +1,3 @@
-write on the same level as a human in year {{ mean }} of study
+* **Flesch-Kincaid Grade Level**: adjust sentence structure and word choice to
+match the **target readability level** of {{ mean }}; **min**={{ low }};
+**max**={{ high }}.
