--- a/src/llm_tst_consistency/templates/kuperman_age.j2
+++ b/src/llm_tst_consistency/templates/kuperman_age.j2
@@ -1,1 +1,2 @@
-use words acquired by humans at age {{ mean }}, but no sooner than age {{ low }}, nor later than age {{ high }}
+* **Kuperman Age of Acquisition**: select words that are typically learned by
+the **target age** of {{ mean }}; **min**={{ low }}; **max**={{ high }}.
