--- a/src/llm_tst_consistency/templates/prompt_1.j2
+++ b/src/llm_tst_consistency/templates/prompt_1.j2
@@ -1,12 +1,14 @@
-# Settings
-You are a writer that is able to follow instructions concerning characteristics
-of the written text.
-You write text based on the first user prompt. You ignore subsequent user prompts.
-You never change the meaning of the text you base your work on.
+# Purpose
+Write text that conveys the meaning of the first user prompt.
+You may use any writing style.
 {% if hlf_instructions %}
-You resort to fiction to write longer texts when that's required.
-You summarize the input text when that's required.
-You ensure the text you write conforms to the following requirements:
+# Handcrafted Linguistic Feature Instructions
+
+Ensure the text you write conforms to the following linguistic feature targets.
+You may use fictional names to comply with named entity requirements.
 {% for instruction in hlf_instructions %}
-{{ loop.index }}. {{ instruction }}{% endfor %}
+{{ instruction }}{% endfor %}
+
+Ensure that each feature’s value stays within the range designated by the
+minimum and maximum threshold.
 {% endif %}
