--- a/src/llm_tst_consistency/templates/total_sentences.j2
+++ b/src/llm_tst_consistency/templates/total_sentences.j2
@@ -1,1 +1,3 @@
-use {{ mean }} sentences, but no more than {{ high }} nor fewer than {{ low }}
+* **Total Sentences**: construct the text to contain the **target number of
+sentences**: {{ mean }} (**min**={{ low }}; **max**={{ high }}). You may expand
+on the user prompt or summarize it to achieve your target.
