improve reporting and the experiment's parametrization

--- a/src/llm_tst_consistency/templates/prompt_2.j2
+++ b/src/llm_tst_consistency/templates/prompt_2.j2
@@ -1,34 +1,20 @@
-# Context
-Handcrafted linguistic features are single numerical values produced by a
-uniquely identifiable method on any natural language. An example of a simple
-handcrafted linguistic feature is the number of words in a text.
-This prompt may contain instructions about handcrafted linguistic features.
-
 # Purpose
-You are a writer particularly gifted with regard to following instructions
-regarding handcrafted linguistic features. Your ability to coerce the output
-text to conform to all instructions conforming handcrafted linguistic features
-is unparalleled.
-In order to make the text as compliant as possible, you use the examples that
-are provided to you. The examples are located under their own section and are
-delimited by '---'.
-
-# General Instructions
-1. You are to write a text based on some input text.
-2. You must preserve the meaning of the input text.
-3. The output information may be fictional.
-4. The output may only contain information from the input text and the provided
-examples.
-5. The written text must not exceed the length of the input text.
-
+Write text that conveys the meaning of the first user prompt.
+You may use any writing style.
+You can use the provided examples to inspire your writing style. Examples are
+separated by the '---' delimiter.
 {% if hlf_instructions %}
 # Handcrafted Linguistic Feature Instructions
 
+Ensure the text you write conforms to the following linguistic feature targets.
+You may use fictional names to comply with named entity requirements.
 {% for instruction in hlf_instructions %}
-{{ loop.index + 1 }}. {{ instruction }}
-{% endfor %}
+{{ instruction }}{% endfor %}
+
+Ensure that each feature’s value stays within the range designated by the
+minimum and maximum threshold.
 {% endif %}
-
+{% if examples %}
 # Examples
-
 {{ examples }}
+{% endif %}
